style.css
@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');

@import url('https://fonts.googleapis.com/css2?family=Crimson+Text:ital,wght@0,400;0,600;0,700;1,400;1,600;1,700&display=swap');
:root {
    --bg-main: #ffffff;
    --bg-secondary: #f4faef;           /* Soft green-tinted background */
    --heading-light: #f0f0f0;
    --heading: #2e2e2e;                /* Dark gray for titles */
    --text: #0b1014;                   /* Almost black for body */
    --text-white: #ffffff;
    --accent-green-dark: #2f663e;      /* For buttons or icons */
    --accent-green: #538d22;
    --accent-green-light: #aad576;
    --vn-finance: #8c3413;
    --margin: 7%;
}

* {
    margin: 0;
    padding: 0;
    font-family:  "Playfair Display", serif;
    line-height: 1.6;
    box-sizing: border-box;
}

.reveal{
    position: relative;
    transform: translateY(50px);
    opacity: 0;
    transition: 2s all ease;
  }
  
*.active{
    transform: translateY(0);
    opacity: 1;
}

html {
    scroll-behavior: smooth;
    overflow-x: hidden;
}

body {
    background-color: var(--color-bg-main);
    font-size: 1.3rem;
    /* background-image: radial-gradient(#cfcfcf 1px, transparent 0);
    background-size: 35px 35px;
    background-attachment: fixed; */
}

nav {
    background-color: #1e2b40;
    position: sticky;
    top: 0;
    padding: 1rem;
    z-index: 1000;
    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
}

nav > div {
    display: flex;
    gap: 5%;
    margin-left: var(--margin);
    margin-right: var(--margin);
}

nav a {
    text-decoration: none;
    color: var(--heading-light)
}

nav a:hover, footer a:hover {
    color: var(--text-white);
    transition: 0.5s ease-in-out;
}

header {
    padding: 2rem;
    height: 55rem;
    margin-bottom: 5rem;
    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
    /* background: url(images/hero-image.jpg), #00000039; */
    background: url(images/hero-image.jpg);
    background-size: cover;
    background-blend-mode: darken;
    background-attachment: fixed;
    background-position: center;
}

header > div {
    margin: 0 var(--margin);
    display: flex;
    align-items: center;
    height: 100%;
    text-align: center;
    background-color: #0000004a;
    padding: 2rem;
    justify-content: center;
}

h1 {
    font-size: 5rem;
    font-weight: 800;
    color: var(--heading-light);
    line-height: 1;
    text-transform: uppercase;
    font-family: "Crimson Text", serif;
}

header p {
    margin-top: 5rem;
    color: var(--heading-light)
}

.dash {
    margin-top: 5rem;
    width: 12rem;
    height: 0.6rem;
    background-color: #ff9d00;
    margin-left: auto;
    margin-right: auto;
}

h2 {
    font-size: 4rem;
    color: var(--heading);
    font-weight: 600;
    margin-bottom: 2rem;
    text-align: center;
}

h3 {
    font-size: 4rem;
    color: var(--color-heading);
    margin-bottom: 1rem;
}


main p {
    color: var(--color-text);
    margin-bottom: 0.5rem;
}

section {
    padding: 2rem;
}

section > div {
    margin: 0 var(--margin);
    padding-top: 10rem;
    padding-bottom: 10rem;
}

.about {
    display: flex;
}

#about h2 {
    text-align: left;
}

.about > div:nth-child(1) {
    width: 40%;
}

.about img {
    width: 80%;
}

.about > div:nth-child(2) {
    width: 60%;
}

#demographic, #topics {
    background-color: var(--bg-secondary);
}

.demographic {
    display: flex;
    flex-direction: column;
    text-align: center;
    row-gap: 1rem;
    justify-content: center;
}

.demographic > div {
    background-color: var(--accent-green-dark);
    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
    padding: 2rem;
    display: flex;
    gap: 2%;
    align-items: center;
    width: 100%;
}

#demographic i {
    font-size: 4rem;
}

#demographic p, #demographic i {
    color: var(--text-white);
}

#theme {
    background: url(images/the-new-era.jpg), #000000b7;
    background-size: cover;
    background-blend-mode: darken;
    background-attachment: fixed;
    background-position: center;
}

#theme * {
    color: var(--heading-light);
    text-align: center;
}

.theme {
    display: flex;
    gap: 10%;
    border-radius: 3rem;
}

#theme h3 {
    font-size: 3rem;
    color: var(--color-subtle-bg);
    font-weight: 600;
    margin-bottom: 2rem;
}

#theme p {
    color: #f0f0f0f3;
}

.topics {
    display: flex;
    text-align: center;
    justify-content: center;
    gap: 5%;
}

.topics > div {
    width: 30%;
    padding: 2rem;
    background-color: var(--accent-green-dark);
    color: var(--text-white);
}

#topics i {
    font-size: 4rem;
    margin-bottom: 2rem;
}

#topics p {
    color: var(--text-white);
}

#awards {
    text-align: center;
}

.awards {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    gap: 5%;
    row-gap: 2rem;
    margin-bottom: 4rem;
}

.awards > div {
    background-color: var(--accent-green);
    padding: 2rem;
    width: 20%;
}

#awards h3 {
    font-size: 4rem;
    color: var(--heading-light);
}

.awards p {
    color: var(--text-white);
}

.vnfinance {
    display: flex;
    text-align: center;
    gap: 2rem;
    justify-content: center;
    margin: 2rem 0;
    flex-wrap: wrap;
}

.vnfinance > div {
    background: var(--accent-green-dark);
    padding: 2rem;
    align-items: center;
    width: 42%;
}

.vnfinance i {
    font-size: 4rem;
    margin-bottom: 2rem;
}

.vnfinance p, .vnfinance i {
    color: white;
}

#awards img {
    max-width: 25rem;
    margin: 2rem 0;
}

#registration {
    background-color: var(--bg-secondary);
    text-align: center;
}

.table-wrapper {
    overflow-x: auto;
}

table {
    border-collapse: collapse;
    width: 100%;
}

table th {
    background-color: var(--accent-green-dark);
    color: var(--heading-light);
    font-size: 1.5rem;
}

table td, table th {
    border: 2px solid var(--text);
    padding: 1rem;
}

.registernow {
    background-color: var(--accent-green-dark);
    color: var(--text-white);
    text-decoration: none;
    margin-top: 10rem;
    padding: 2rem 3rem;
    border-radius: 2rem;
    font-size: 2rem;
    font-weight: 800;
    display: inline-block;
}

.registernow:hover {
    background-color: var(--accent-green);
    transition: 0.5s ease-in-out;
}

footer {
    background-color: #1e2b40;
    box-shadow: 0 6px 12px rgba(0, 0, 0, 0.1);
    padding: 2rem;
    color: var(--heading-light)
}

footer > div {
    margin-left: 5%;
    margin-right: 5%;
    display: flex;
    row-gap: 2rem !important;
    gap: 5%;
    align-items: center;
    margin: 4rem var(--margin);
}

footer > div > div:nth-child(1) {
    width: 40%;
}

footer h1 {
    font-size: 2.5rem !important;
    color: var(--heading-light) !important;
    font-weight: 600 !important;
}

footer p {
    color: var(--color-bg-main);
}

footer i {
    margin-right: 1rem;
}

footer a {
    text-decoration: none;
    color: var(--color-bg-main)
}

footer hr {
    border: 0.25px solid var(--heading-light);
    margin-bottom: 1rem;
}

@media screen and (max-width: 1024px) {
    :root {
        --margin: 2%;
        --margin-header: 0%;
    }
    h1 {
        font-size: 3rem;
    }

    h2 {
        font-size: 3.2rem;
    }

    h3 {
        font-size: 3rem;
    }

    body {
        font-size: 1.3rem;
    }

    nav > div {
        gap: 5%;
        justify-content: center;
        flex-wrap: wrap;
    }

    #about {
        text-align: center;
    }

    #about h2 {
        text-align: center;
    }

    .about {
        flex-direction: column;
        gap: 2rem;
    }

    .about > div {
        width: 100% !important;
    }

    .about img {
        width: 100%;
    }

    .demographic,
    .topics {
        flex-direction: column;
        gap: 2rem;
    }

    .demographic > div {
        text-align: left;
        gap: 5%;
    }

    .topics > div {
        width: 100%;
    }

    .awards > div {
        width: 40%;
    }

    .vnfinance > div {
        width: 100%;
    }

    table tr th,
    table tr td {
        font-size: 1.4rem;
        padding: 0.8rem;
    }

    #registernow a {
        font-size: 1.6rem;
        padding: 1.5rem 2.5rem;
    }

    footer > div {
        flex-direction: column;
        text-align: center;
    }

    footer > div > div:nth-child(1) {
        width: 100%;
    }

    footer h2,
    footer h3,
    footer p {
        text-align: center;
    }
}

@media screen and (max-width: 600px) {
    /* h1 {
        font-size: 3rem;
    } */

    header {
        height: 60rem;
    }

    h2 {
        font-size: 2.4rem;
    }

    h3 {
        font-size: 2rem;
    }

    body {
        font-size: 1.2rem;
    }

    nav p {
        font-size: 1.4rem;
    }

    .awards > div {
        width: 100%;
    }

    #awards img {
        width: 100%;
    }

    .registernow {
        font-size: 1.4rem;
        padding: 1rem 2rem;
    }

    table tr th,
    table tr td {
        font-size: 1.2rem;
        padding: 0.6rem;
    }
}

@media (pointer: coarse) {
    header, #theme {
        background-attachment: scroll !important;
    }
}

